[tool.poetry]
name = "noteworth-project"
version = "0.1.0"
description = ""
authors = ["Rohit Sodhia <sodhia.rohit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
